--- a/project-anemone/docker-compose.prod.yml
+++ b/project-anemone/docker-compose.prod.yml
@@ -9,7 +9,18 @@ services:
       - sail
     depends_on:
       - mysql
-
+  scraper:
+    image: electricbluefishproductions/scraper
+    ports:
+      - '${SCRAPER_PORT}:5000'
+    networks:
+      - sail
+  app:
+    image: avariantphi/anemone-app
+    ports:
+      - '${ANEMONE_WEB_APP_PORT}:80'
+    networks:
+      - sail
   mysql:
     image: 'mysql/mysql-server:8.0'
     ports:
