--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI Anemone API
+name: Docker Image CI Scrapper
 
 on:
   push:
@@ -35,6 +35,6 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          file: ./project-anemone/Dockerfile
+          file: ./project-anemone/public/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/anemone-api:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/anemone-scrapper:latest
