--- a/project-anemone/docker-compose.prod.yml
+++ b/project-anemone/docker-compose.prod.yml
@@ -54,6 +54,7 @@ services:
       - '${PMA_PORT}:80'
     environment:
       - PMA_HOST=mysql
+      - PMA_ABSOLUTE_URI=https://anemone.avalonbloom.com/pma
     networks:
       - sail
 networks:
